another install update

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 ---
 # We are actually a mix of languages, but need to start from somewhere
-language: java
+language: php 
 
 install:
-  - DEBIAN_FRONTEND=noninteractive sudo apt-get -yq install unifont imagemagick fontforge php python3
+  - DEBIAN_FRONTEND=noninteractive sudo apt-get -yq install unifont imagemagick fontforge maven python3
   - git clone https://github.com/mike42/fontscale-util
   - (cd fontscale-util && mvn clean package)
   - cp fontscale-util/target/fontscale-util-*-jar-with-dependencies.jar utils/fontscale-wrapper/fontscale-utils.jar
