--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
   - which php
   - which python
   - which python3
-  - pecl install imagick
+  - printf "\n" | pecl install imagick
 
 script:
   - ./configure
